--- a/imageScan.html
+++ b/imageScan.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teachable Machine Image Model</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="image.css">
 </head>
+
 <body>
+
     <div class="container">
         <!-- Webcam Section -->
         <div class="webcam-section">
             <h1>Scan Image</h1>
             <button type="button" id="myButton" onclick="init()">Start Webcam</button>
             <div id="webcam-container" class="webcam-container"></div>
+            <!-- Loader -->
+            <div id="loader" class="loader text-center"></div>
+
+            <!-- Success Message -->
+            <p id="successMessage" class="success">✅ Process Completed!</p>
         </div>
-        
+
         <!-- Output Section -->
         <div class="output-section">
             <h1>Result</h1>
@@ -27,7 +35,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-    <script src="app.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <script src="image.js"></script>
 </body>
+
 </html>
