--- a/index.html
+++ b/index.html
@@ -1,76 +1,45 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(to right, #141e30, #243b55);
-            color: white;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            overflow: hidden;
-        }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            padding: 40px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        }
-        h1 {
-            font-size: 36px;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-            opacity: 0.8;
-        }
-        .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 20px;
-        }
-        .btn {
-            background: #2196f3;
-            color: white;
-            padding: 12px 25px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            text-decoration: none;
-        }
-        .btn:hover {
-            background: #1976d2;
-            transform: scale(1.05);
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EduPix</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to EduPix</h1>
-        <p>Your gateway to the best learn experiences.</p>
-        <div class="buttons">
-            <a href="imageScan.html" class="btn">Find the image</a>
-            <a href="finger.html" class="btn">Find the finger number</a>
-        </div>
+  <div class="container step1">
+    <h2>Login Verification</h2>
+    <br>
+    <h4>Enter your email address</h4>
+    <br>
+    <p>You will receive an email with a one-time password</p>
+    <div class="form-group">
+      <input type="email" id="emailAddress" placeholder="Email Address" onkeyup="validateEmail(this.value)">
     </div>
+    <button class="nextButton">Next &rarr;</button>
+  </div>
+
+  <div class="container step2">
+    <h2>OTP Verification</h2>
+    <br>
+    <h4>Enter one-time password</h4>
+    <p>A one-time password has been sent to <span id="verifyEmail"></span></p>
+    <div class="otp-form">
+      <p>Enter the 4 digit code we sent you via email to continue</p>
+      <div class="otp-group">
+        <input type="number">
+        <input type="number">
+        <input type="number">
+        <input type="number">
+      </div>
+      <p>Not your email? / Didn't receive the code?</p>
+      <a href="javascript:void(0)" onclick="changeMyEmail()"> try Again</a>
+    </div>
+    <button class="verifyButton">Verify &rarr;</button>
+  </div>
 </body>
 </html>
