Update User Frendly ui

--- a/homePage.html
+++ b/homePage.html
@@ -15,6 +15,10 @@
             <a href="imageScan.html" class="btn">Find the image</a>
             <a href="finger.html" class="btn">Find the finger number</a>
         </div>
+        <div class="link-spacing">
+        <a href="index.html">New Login</a>
+        </div>
     </div>
+
 </body>
 </html>
