--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container step1">
-    <h2>Login Verification</h2>
+    <h2>Well Come EduPix</h2>
     <br>
     <h4>Enter your email address</h4>
     <br>
