--- a/imageScan.html
+++ b/imageScan.html
@@ -21,6 +21,7 @@
 
             <!-- Success Message -->
             <p id="successMessage" class="success">✅ Process Completed!</p>
+            <a href="homePage.html" class="btn">Back to the Home</a>
         </div>
 
         <!-- Output Section -->
